crates/carta/tests/snapshots/golden_e2e__mediawiki__commonmark__nowiki.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
Literal '''not bold''' and \[\[not a link\]\] here.
