crates/carta/tests/snapshots/golden_e2e__mediawiki__commonmark__paragraphs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
First line second line of same paragraph.

A new paragraph here.
