crates/carta/tests/snapshots/golden_e2e__mediawiki__commonmark__preformatted.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
`preformatted line with  spaced gaps`
