crates/carta/tests/snapshots/golden_e2e__mediawiki__commonmark__ref-multiblock.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A statement[1] with a multi-paragraph footnote.

[1] First paragraph of the note.

Second paragraph of the note.
