crates/carta/tests/snapshots/golden_e2e__mediawiki__commonmark__references.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A claim[1] here.

[1] The source.
