crates/carta/tests/snapshots/golden_e2e__mediawiki__commonmark__table-cell-attr-quoted-pipe.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<tbody>
<tr>
<td style="background:red|orange"><p>cell with a pipe inside the
attribute</p></td>
</tr>
<tr>
<td><p>spanning cell</p></td>
</tr>
</tbody>
</table>
