crates/carta/tests/snapshots/golden_e2e__mediawiki__commonmark__table-cell-line-markers.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<tbody>
<tr>
<td><p>* first line literal</p>
<ul>
<li>second line list</li>
</ul></td>
</tr>
</tbody>
</table>
